# test_task

./: README.md
aiogram/: Dockerfile  config.py  requirements.txt  run.py
aiogram/keyboards/: common_keyboards.py
aiogram/routers/: __init__.py  admin_handlers.py  command.py
aiogram/routers/commands/: __init__.py  base_commands.py  task_comments.py  user_commands.py  user_tasks.py
fast-comment/: Dockerfile  pyproject.toml  requirements.txt
fast-comment/fastapi-application/: .env  .env.template  main.py
fast-comment/fastapi-application/alembic/versions/: 2025_03_05_1144-40742dc790c6_create.py
fast-comment/fastapi-application/api/: __init__.py
fast-comment/fastapi-application/api/api_v1/: __init__.py  comments.py
fast-comment/fastapi-application/core/: config.py
fast-comment/fastapi-application/core/models/: base.py  db_helper.py
fast-comment/fastapi-application/core/schemas/: comment.py
fast-comment/fastapi-application/crud/: tasks.py
fast-comment/fastapi-application/utils/: redis_client.py
test/: .env.template  docker-compose.yml
test/myapp/: Dockerfile  entrypoint.sh  requirements.txt
test/myapp/api/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
test/myapp/api/migrations/: 0001_initial.py
test/myapp/myapp/: celery.py  settings.py  urls.py
